trying to fix alignment on class blog

--- a/css/style_online_classes_blog.css
+++ b/css/style_online_classes_blog.css
@@ -46,6 +46,12 @@ a{
 .span_3_of_3 {
 	width: 105%;
 }
+.span_2_of_3 {
+	width: 66.1%;
+}
+.span_1_of_3 {
+	width: 32.2%;
+}
 .logo{
   	background: var(--log_bg);
   	opacity: .8;
@@ -68,7 +74,12 @@ a{
 	padding: 35px 30px;
 	box-shadow: 5px 5px 15px -1px rgba(0,0,0,0.3);
 }
-
+.side-post{
+	background: var(--post_bg);
+	margin: 0 auto 1.5em auto;
+	width: 15em;
+	padding: 20px;
+}
 .blog-content{
 	font-size: 1em;
 	border-left: 5px solid var(--post_line_color);
